--- a/rating-games/public/index.html
+++ b/rating-games/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Rating Games</title>
   </head>
-  <body>
+  <body class="text-white bg-dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
